--- a/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
@@ -27,13 +27,13 @@
          </children>
       </HBox>
       <GridPane hgap="5">
-         <padding><Insets left="170" /></padding>
+         <padding><Insets left="195" /></padding>
          <children>
          <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="0" />
          <Label text="Coût" GridPane.columnIndex="1" GridPane.rowIndex="0" />
          <Label text="Distance" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-         <Label text="Type" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-         <Label text="DateStart" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+         <Label text="Type" GridPane.columnIndex="3" GridPane.rowIndex="0" style="-fx-padding: 0 12 0 0;"/>
+         <Label text="DateStart" GridPane.columnIndex="4" GridPane.rowIndex="0" style="-fx-padding: 0 19 0 0;"/>
          <Label text="DateEnd" GridPane.columnIndex="5" GridPane.rowIndex="0" />
          </children>
          <columnConstraints>
