--- a/src/main/resources/eu/telecomnancy/labfx/EditOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/EditOffer.fxml
@@ -13,6 +13,7 @@
 <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EditOfferController">
    <children>
       <fx:include source="DirectDealingMenu.fxml"/>   
+            <fx:include source="header.fxml" />
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="Edit offer">
          <font>
             <Font size="19.0" />
