--- a/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
@@ -12,6 +12,7 @@
 <VBox xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InboxScreen">
    <children>
       <fx:include source="DirectDealingMenu.fxml" />
+            <fx:include source="header.fxml" />
       <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
