--- a/src/main/resources/eu/telecomnancy/labfx/ViewCompte.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewCompte.fxml
@@ -16,6 +16,7 @@
 <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewCompteController">
     <children>
         <fx:include source="DirectDealingMenu.fxml" />
+              <fx:include source="header.fxml" />
         <Label fx:id="userName" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="39.0" text="User Name">
             <font>
                 <Font size="19.0" />
