--- a/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
@@ -12,6 +12,7 @@
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewOfferController">
    <children>
       <fx:include source="DirectDealingMenu.fxml" />
+            <fx:include source="header.fxml" />
       <HBox alignment="CENTER" prefHeight="141.0" prefWidth="595.0">
          <children>
             <Label fx:id="nom" text="Nom de l'offre">
