--- a/src/main/resources/eu/telecomnancy/labfx/Login.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/Login.fxml
@@ -47,14 +47,14 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="username" onKeyPressed="#checkEnterUser" style="-fx-background-color: #2e354f; -fx-text-fill: #8c90b3;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="username" onKeyPressed="#checkEnterUser" style="-fx-background-color: #2e354f; -fx-text-fill: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         
         <Label text="Password" textFill="#8c90b3" GridPane.columnIndex="0" GridPane.columnSpan="1" GridPane.rowIndex="3">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <PasswordField fx:id="password" onKeyPressed="#checkEnterPassword" style="-fx-background-color: #2e354f; -fx-text-fill: #8c90b3;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <PasswordField fx:id="password" onKeyPressed="#checkEnterPassword" style="-fx-background-color: #2e354f; -fx-text-fill: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
         <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.columnSpan="1" GridPane.rowIndex="4">
             <Button onAction="#clickButton" style="-fx-background-color: #800080; -fx-text-fill: #fefefe;" text="Login" />
