--- a/src/main/resources/eu/telecomnancy/labfx/EditOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/EditOffer.fxml
@@ -7,12 +7,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EditOfferController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EditOfferController">
    <children>
-      <fx:include source="DirectDealingMenu.fxml"/>   
+      <fx:include source="DirectDealingMenu.fxml" />   
             <fx:include source="header.fxml" />
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="Edit offer">
          <font>
@@ -38,6 +39,7 @@
          <children>
             <DatePicker fx:id="dateDebut" promptText="Date du début" />
             <DatePicker fx:id="dateFin" promptText="Date de fin " />
+            <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
             <TextField fx:id="duree" prefHeight="26.0" prefWidth="200.0" promptText="Durée du prêt en jour" />
          </children>
       </HBox>
@@ -52,7 +54,7 @@
             </Label>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="265.0">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="265.0">
          <children>
             <Button fx:id="valider" mnemonicParsing="false" onAction="#validerCreation" prefHeight="26.0" prefWidth="59.0" text="Edit" />
             <Button fx:id="retour" mnemonicParsing="false" onAction="#retourMain" text="Cancel" />
