--- a/src/main/resources/eu/telecomnancy/labfx/ViewOfferProfil.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewOfferProfil.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewOfferProfilController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"  style="-fx-background-color: #fff0f5;" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewOfferProfilController">
    <children>
       <fx:include source="DirectDealingMenu.fxml" />
             <fx:include source="header.fxml" />
@@ -186,13 +186,13 @@
          <children>
             <VBox alignment="CENTER">
                <children>
-                  <Button fx:id="retour" mnemonicParsing="false" onAction="#retourMainScreen" text="Retour" />
+                  <Button fx:id="retour" mnemonicParsing="false" style="-fx-background-color: #800080; -fx-text-fill: #fefefe;"  onAction="#retourMainScreen" text="Retour" />
                </children>
             </VBox>
             
             <VBox alignment="CENTER">
                <children>
-                  <Button fx:id="messageButton" mnemonicParsing="false" onAction="#editOffer" text="Edit" />
+                  <Button fx:id="messageButton" style="-fx-background-color: #800080; -fx-text-fill: #fefefe;" mnemonicParsing="false" onAction="#editOffer" text="Edit" />
                </children>
             </VBox>
          </children>
