--- a/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
@@ -12,10 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewCreateOfferController" style="-fx-background-color: #fff0f5;">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewCreateOfferController" style="-fx-background-color: #fff0f5;">
     <children>
         <!-- Include your other FXML files here (if needed) -->
-
+      <fx:include source="DirectDealingMenu.fxml" />
+            <fx:include source="header.fxml" />
         <HBox alignment="CENTER" prefHeight="39.0" prefWidth="578.0">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" textFill="#7b68ee" text="Créer une offre ou une demande">
